--- a/src/PruebaApiSpa.Web.Host/ClientApp/src/app/layout/footer.component.html
+++ b/src/PruebaApiSpa.Web.Host/ClientApp/src/app/layout/footer.component.html
@@ -1,9 +1,5 @@
-<footer class="main-footer">
+<footer class="main-footer text-center">
   <strong>
     Copyright &copy; {{ currentYear }}
-    <a href="javascript:;">PruebaApiSpa</a>.
   </strong>
-  <div class="float-right d-none d-sm-inline-block">
-    <b>{{ "Version" | localize }} </b> {{ versionText }}
-  </div>
 </footer>
