--- a/src/PruebaApiSpa.Web.Host/ClientApp/src/app/countries/create-update-country/create-update-country-dialog.component.html
+++ b/src/PruebaApiSpa.Web.Host/ClientApp/src/app/countries/create-update-country/create-update-country-dialog.component.html
@@ -1,4 +1,4 @@
-<form class="form-horizontal" autocomplete="off" #createCountryModal="ngForm" (ngSubmit)="save()">
+
   <div class="modal-header">
     <h4 class="modal-title pull-left">
       {{title}}
@@ -8,67 +8,79 @@
     </button>
   </div>
   <div class="modal-body">
-    <!-- Short Name -->
-    <div class="form-group row required">
-      <label class="col-md-3 col-form-label" for="name">
-        Sort Name
-      </label>
-      <div class="col-md-9">
-        <input type="text" class="form-control" name="name" id="name" required maxlength="32" [(ngModel)]="country.shortName"
-          #nameModel="ngModel" #nameEl />
-        <abp-validation-summary [control]="nameModel" [controlEl]="nameEl"></abp-validation-summary>
-      </div>
-    </div>
 
-    <!-- alpha2Code -->
-    <div class="form-group row required">
-      <label class="col-md-3 col-form-label" for="alpha2Code">
-        Alpha 2 Code
-      </label>
-      <div class="col-md-9">
-        <input type="text" class="form-control" name="alpha2Code" id="alpha2Code" required maxlength="10" [(ngModel)]="country.alpha2Code"
-          #alpha2CodeModel="ngModel" #nameEll />
-        <abp-validation-summary [control]="alpha2CodeModel" [controlEl]="nameEll"></abp-validation-summary>
-      </div>
-    </div>
+      <tabset>
+          <tab [heading]="'Info Country'" class="pt-3 px-2">
+              <form class="form-horizontal" autocomplete="off" #createCountryModal="ngForm" (ngSubmit)="save()">
+                  <!-- Short Name -->
+                  <div class="form-group row required">
+                      <label class="col-md-3 col-form-label" for="name">
+                          Sort Name
+                      </label>
+                      <div class="col-md-9">
+                          <input type="text" class="form-control" name="name" id="name" required maxlength="32" [(ngModel)]="country.shortName"
+                                 #nameModel="ngModel" #nameEl />
+                          <abp-validation-summary [control]="nameModel" [controlEl]="nameEl"></abp-validation-summary>
+                      </div>
+                  </div>
 
-    <!-- alpha3Code -->
-    <div class="form-group row required">
-      <label class="col-md-3 col-form-label" for="alpha3Code">
-        Alpha 3 Code
-      </label>
-      <div class="col-md-9">
-        <input type="text" class="form-control" name="alpha3Code" id="alpha3Code" required maxlength="10" [(ngModel)]="country.alpha3Code"
-          #alpha3CodeModel="ngModel" #nameElll />
-        <abp-validation-summary [control]="alpha3CodeModel" [controlEl]="nameElll"></abp-validation-summary>
-      </div>
-    </div>
+                  <!-- alpha2Code -->
+                  <div class="form-group row required">
+                      <label class="col-md-3 col-form-label" for="alpha2Code">
+                          Alpha 2 Code
+                      </label>
+                      <div class="col-md-9">
+                          <input type="text" class="form-control" name="alpha2Code" id="alpha2Code" required maxlength="10" [(ngModel)]="country.alpha2Code"
+                                 #alpha2CodeModel="ngModel" #nameEll />
+                          <abp-validation-summary [control]="alpha2CodeModel" [controlEl]="nameEll"></abp-validation-summary>
+                      </div>
+                  </div>
 
-    <!-- numericCode -->
-    <div class="form-group row required">
-      <label class="col-md-3 col-form-label" for="numericCode">
-        Numeric Code
-      </label>
-      <div class="col-md-9">
-        <input type="text" class="form-control" name="numericCode" id="numericCode" required maxlength="10" [(ngModel)]="country.numericCode"
-          #numericCodeModel="ngModel" #nameElll />
-        <abp-validation-summary [control]="numericCodeModel" [controlEl]="nameElll"></abp-validation-summary>
-      </div>
-    </div>
+                  <!-- alpha3Code -->
+                  <div class="form-group row required">
+                      <label class="col-md-3 col-form-label" for="alpha3Code">
+                          Alpha 3 Code
+                      </label>
+                      <div class="col-md-9">
+                          <input type="text" class="form-control" name="alpha3Code" id="alpha3Code" required maxlength="10" [(ngModel)]="country.alpha3Code"
+                                 #alpha3CodeModel="ngModel" #nameElll />
+                          <abp-validation-summary [control]="alpha3CodeModel" [controlEl]="nameElll"></abp-validation-summary>
+                      </div>
+                  </div>
 
-    <!-- linkSubDivision -->
-    <div class="form-group row required">
-      <label class="col-md-3 col-form-label" for="name">
-        Link Sub Division
-      </label>
-      <div class="col-md-9">
-        <input type="url" class="form-control" name="linkSubDivision" id="linkSubDivision" required minlength="10" [(ngModel)]="country.linkSubDivision"
-          #linkSubDivisionModel="ngModel" #nameEllll />
-        <abp-validation-summary [control]="linkSubDivisionModel" [controlEl]="nameEllll"></abp-validation-summary>
-      </div>
-    </div>
+                  <!-- numericCode -->
+                  <div class="form-group row required">
+                      <label class="col-md-3 col-form-label" for="numericCode">
+                          Numeric Code
+                      </label>
+                      <div class="col-md-9">
+                          <input type="text" class="form-control" name="numericCode" id="numericCode" required maxlength="10" [(ngModel)]="country.numericCode"
+                                 #numericCodeModel="ngModel" #nameElll />
+                          <abp-validation-summary [control]="numericCodeModel" [controlEl]="nameElll"></abp-validation-summary>
+                      </div>
+                  </div>
+
+                  <!-- linkSubDivision -->
+                  <div class="form-group row required">
+                      <label class="col-md-3 col-form-label" for="name">
+                          Link Sub Division
+                      </label>
+                      <div class="col-md-9">
+                          <input type="url" class="form-control" name="linkSubDivision" id="linkSubDivision" required minlength="10" [(ngModel)]="country.linkSubDivision"
+                                 #linkSubDivisionModel="ngModel" #nameEllll />
+                          <abp-validation-summary [control]="linkSubDivisionModel" [controlEl]="nameEllll"></abp-validation-summary>
+                      </div>
+                  </div>
+                  <!--Button Save-->
+                  <div class="d-flex justify-content-center bd-highlight">
+                      <div class="bd-highlight text-center mt-2">
+                          <button type="submit" class="btn btn-success" [disabled]="!createCountryModal.form.valid || saving">Save</button>
+                      </div>
+                  </div>                  
+              </form>
+          </tab>
+          <tab [heading]="'Subdivisions'" class="pt-3 px-2">
+          </tab>
+      </tabset>
+          
   </div>
-  <div class="modal-footer text-center">
-    <button type="submit" class="btn btn-success" [disabled]="!createCountryModal.form.valid || saving">Save</button>
-  </div>
-</form>
