--- a/src/PruebaApiSpa.Web.Host/ClientApp/src/app/countries/countries.component.html
+++ b/src/PruebaApiSpa.Web.Host/ClientApp/src/app/countries/countries.component.html
@@ -28,15 +28,15 @@
                             <button type="button" class="btn bg-blue" (click)="getDataPage(1)">
                                 <i class="fas fa-search"></i>
                             </button>
-                            <button type="button" class="btn btn-default"
+                            <!--<button type="button" class="btn btn-default"
                                 (click)="advancedFiltersVisible = !advancedFiltersVisible">
                                 <i class="fas" [class.fa-angle-up]="advancedFiltersVisible"
                                     [class.fa-angle-down]="!advancedFiltersVisible"></i>
-                            </button>
+                            </button>-->
                         </div>
                     </div>
                     <!-- Filters extras -->
-                    <div *ngIf="advancedFiltersVisible" class="mb-0 mt-1">
+                    <!--<div *ngIf="advancedFiltersVisible" class="mb-0 mt-1">
                         <div class="card-body">
                             <form class="form-horizontal">
                                 <div class="row">
@@ -80,7 +80,7 @@
                                 Search
                             </button>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
                 <!-- Table of country -->
                 <div class="card-body table-responsive p-0">
